--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<div class="image-container">
-			<img src="images/puma.jpg">
+			<img src="images/puma.png">
 		</div>
 		<div class="product-detail-container">
 			<h2>Puma Nitro</h2>
