--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		</div>
 		<div class="product-detail-container">
 			<h2>Puma Nitro</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p>
+			<p>Puma's newest shoe is dubbed "the Puma Clyde Court Disrupt". Because, his inspiration came from the Knicks club legend from New York, Walt "Clyde" Frazier.</p>
 			<div class="ratings">
 				<i class="fas fa-star"></i>
 				<i class="fas fa-star"></i>
@@ -30,7 +29,7 @@
 					<div class="green"></div>
 				</div>
 				<div class="price">
-					<p>$24.99</p>
+					<p>$82.76</p>
 				</div>
 			</div>
 			<button>Add To Cart</button>
